# demonlab-dashboard

./: .buildinfo  .directory  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
.doctrees/: environment.pickle  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  change-request.md  feature-request.md  new-feature-definition--template.md
.github/workflows/: build_docs.yml  github_workflows_ci.yml  issue-metrics-mtd.yml  issue-metrics.yml  metrics.yml  mtx_msg.yml  todos-to-issue.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
doctrees/: environment.pickle
html/: .buildinfo
src/demonlab_dashboard/: __init__.py  about.py  app.py  button_action.py  clock.py  database.py  db.py  demonlab-dashboard-prime.py  demonlab-dashboard.py  demonlab-dashboard.tcss  fades.py  ganglion.toml  main.py  services_data_table.py  splash.py  startup.py  svc_check.py  system-health.py  system_health.py  tex-web.txt
src/demonlab_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/demonlab_dashboard/styles/: adds.tcss  demonlab-dashboard.tcss  demonlab-dashboard.tcss-new
tests/: test_main.py
