[project]
name = "demonlab-dashboard"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mike Demondad", email = "mike@demonlab.net" }
]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "textual==3.2.0",
  "asyncio==3.4.3",
  "asyncpg==0.30.0",
  "datetime==4.3.0",
  "psycopg2",
  "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.0.0",
  "black",
  "isort",
  "coverage",
  "textual-pyfiglet",
  "textual-dev",
  "psycopg2"
]

[project.scripts]
start = "demonlab_dashboard.main:main"

[project.urls]
Documentation = "https://github.com/demonglobal/demonlab-dashboard#readme"
Issues = "https://github.com/demonglobal/demonlab-dashboard/issues"
Source = "https://github.com/demonglobal/demonlab-dashboard"
