[project]
name = "demonlab-dashboard"
version = "0.1.3"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mike Demondad", email = "mike@demonlab.net" }
]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "textual==3.3.0",
  "asyncio==3.4.3",
  "asyncpg==0.30.0",
  "datetime==5.5",
  "psycopg2-binary",
  "rich==14.1.0",
  "textualeffects>=0.1.4",
  "terminaltexteffects>=0.12.0",
  "textual-pyfiglet>=0.6.0",
  "psutil>=7.0.0",
  "requests>=2.32.3",
  "pillow>=11.2.1",
  "textual-imageview>=0.1.1",
  "pyfiglet>=1.0.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.0.0",
  "black",
  "isort",
  "coverage",
  "textual-pyfiglet",
  "textual-dev",
  "psycopg2-binary",
  "rich==14.1.0",
  "textualeffects>=0.1.4",
  "terminaltexteffects>=0.12.0",
  "textual-pyfiglet>=0.6.0",
  "psutil>=7.0.0",
  "requests>=2.32.3",
  "pillow>=11.2.1",
  "textual-imageview>=0.1.1",
]

[project.scripts]
start = "demonlab_dashboard.main:main"

[project.urls]
Documentation = "https://github.com/demonglobal/demonlab-dashboard#readme"
Issues = "https://github.com/demonglobal/demonlab-dashboard/issues"
Source = "https://github.com/demonglobal/demonlab-dashboard"

[tool.isort]
profile = "black"
